css/style.css
body {
    margin: 25px 0 0 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #fff8e6;
    font-family: 'Raleway', Helvetica, Arial, sans-serif;
}

h1, h4, p {
    margin: 0;
}

h1 {
    font-size: 20px;
}

p {
    line-height: 1.5em;
    font-size: 14px;
}

.wrapper {
    display: flex;
    flex-direction: row;
    width: 900px;
    margin: 0 auto;
}

.section-top-spacing {
    margin-top: 20px;
}

.section-bottom-spacing {
    margin-bottom: 150px;
}

.commentary {
    width: 80%;
    margin: 0 auto;
}

.commentary h1 {
    font-family: 'Rock Salt', cursive;
}

.commentary button {
    margin-top: 24px;
    font-weight: 600;
    font-size: 12px;
    font-family: 'Rock Salt', cursive;
    border-radius: 5px;
    padding: 4px 16px;
    border: none;
    background-color: #e733ff;
    color: #fff;
}

.title {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.title h1 {
    font-family: 'Rock Salt', cursive;
    margin-bottom: -15px;
}

.title p {
    text-transform: uppercase;
    font-family: 'Raleway', sans-serif;
}

#movie-era-tooltip {
    position: absolute;
    padding: 10px 16px 12px 16px;
    border-radius: 5px;
}

.movie-data .movie-title {
    margin: 0px;
}

#disney-era-blurb {
    margin-top: 30px;
}

#node-link-tooltip, #area-tooltip {
    position: absolute;
    padding: 10px 16px 12px 16px;
    border-radius: 5px;
}

.movie-title, .year {
    font-family: 'Rock Salt', cursive;
}

.movie-tooltip {
    background-color:#a83232;
    color: #fff;
}

.actor-tooltip {
    background-color: #fab507;
    color: #333;
}

#area-tooltip {
    background-color: #2B2D2F;
    color: #fff;
}

.role-tooltip {
    text-align: center;
    background-color: #333333;
    color: #fff;
}

line.link:hover {
    stroke: black;
    stroke-width: 4px;
}

#era-navigation {
    display: flex;
    flex-direction: row;
    margin-bottom: 8px;
}

#era-navigation button {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
    padding: 8px 18px;
    border: none;
    font-size: 12px;
    font-weight: bold;
    text-transform: uppercase;
    color: #fff;
}

